$Id$

2020-12-20  Christian Franke  <franke@computer.org>

	configure.ac: Use AC_CONFIG_HEADERS instead of obsolete
	AC_CONFIG_HEADER.  This silences a warning from new autoconf 2.70.
	Print 'deprecated' warning for '--with-solaris-sparc-ata'.

	drivedb.h:
	- Intel X25-E SSDs: IBM OEM (#1401).
	- Seagate BarraCuda 3.5: 12TB
	- Seagate Exos X16: 10TB (#1406, GH issues/63), 12TB.
	- Seagate Archive HDD: Rename to ...(SMR) (#1392).
	- Seagate BarraCuda, Enterprise Capacity, Exos, IronWolf:
	  Add attributes 18, 200.
	- Seagate IronWolf Pro 125 SSDs (#1396).
	- Unify indentation.

2020-12-15  Douglas Gilbert  <dgilbert@interlog.com>

	smartctl: expand -s option with standby,now and standby,off (or
	standby,0) to include SCSI. Modified code from Simon Fairweather
	found in github pull #72. As per my 20201205 patch, this
	area (i.e. SCSI power conditions including START and STOP) needs
	to be revisited; leave that until after the 7.2 release.

2020-12-14  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: add Sony HD-E1B (#1410)

2020-12-12  Alex Samorukov  <samm@os2.kiev.ua>

	Add automake 1.16.2 to the list of tested versions
	os_freebsd.cpp: number of minor patches from Christian Franke

2020-12-05  Douglas Gilbert  <dgilbert@interlog.com>

	smartctl: expand -n option to include SCSI. Code from Simon
	Fairweather. Still thinking about how to handle SCSI "stopped"
	state which requires the user to send a SCSI command to restart.

2020-12-04  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Print Log Page Attributes.  Print NVMe 1.4 features.

	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp: Fix check for LPO support.

2020-12-03  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Print NVMe version.

	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp: Limit NVMe log transfer size
	to one page.  This should fix device or kernel crashes on '-l error'
	if log has more than 64 entries (#1404, Debian Bug 947803).

	nvmeprint.cpp: Read only requested number of entries from NVMe